force-app/main/default/objects/Field_Transition_Rule__c/Field_Transition_Rule__c.object-meta.xml
<CustomObject>
    <label>Field Transition Rule</label>
    <nameField>
        <displayFormat>RULE-{000000}</displayFormat>
        <label>Field Transition Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Transition Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>