force-app/main/default/objects/Field_Transition_Rule__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Field Transition Rules</relationshipLabel>
    <relationshipName>Field_Transition_Rules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>