force-app/main/default/objects/Field_Transition_Rule__c/fields/Allowed_Position__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Position__c</fullName>
    <label>Allowed Position</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>