force-app/main/default/objects/Field_Transition_Rule__c/fields/From_Value__c.field-meta.xml
<CustomField>
    <fullName>From_Value__c</fullName>
    <label>From Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>